--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint *.js",
+    "babel": "babel script.js --watch --out-file script-compiled.js --source-maps",
+    "babel2": "babel videoscript.js --watch --out-file videoscript-compiled.js --source-maps",
     "dev": "browser-sync start --server --files index.html styles.css scripts.js",
     "sass": "node-sass styles.scss styles.css -w"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.18.13",
     "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.7.0",
     "npm-run-all": "^4.1.2"
   },
   "dependencies": {
+    "babel-eslint": "^8.0.2",
     "node-sass": "^4.7.2"
   }
 }
