--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint *.js",
+    "lint": "stylelint *.scss scss/*.scss --syntax scss",
     "babel": "babel script.js --watch --out-file script-compiled.js --source-maps",
     "babel2": "babel videoscript.js --watch --out-file videoscript-compiled.js --source-maps",
     "dev": "browser-sync start --server --files index.html styles.css scripts.js",
@@ -24,6 +25,8 @@
   },
   "dependencies": {
     "babel-eslint": "^8.0.2",
-    "node-sass": "^4.7.2"
+    "lint": "^1.1.2",
+    "node-sass": "^4.7.2",
+    "stylelint": "^8.3.1"
   }
 }
